# approval-tests-setup

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
.github/workflows/: github_actions_build.yml
dependencies/: CMakeLists.txt
include/my_project/: hello_world.hpp
src/: CMakeLists.txt  hello_world.cpp  meson.build
subprojects/: approvaltests.wrap
tests/: CMakeLists.txt  main.cpp  meson.build  tests.cpp
